added municipal brdy map

--- a/src/app/pages/maps/maps.page.html
+++ b/src/app/pages/maps/maps.page.html
@@ -1,10 +1,10 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Maps</ion-title>
+    <ion-title>Active Cases</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <app-olmap>
-  </app-olmap>
+  <app-muncitymap>
+  </app-muncitymap>
 </ion-content>
