--- a/src/app/pages/dashboard/dashboard.page.html
+++ b/src/app/pages/dashboard/dashboard.page.html
@@ -167,6 +167,21 @@
           </div>
         </div>
        </div>
+       <div class="col-lg-12">
+        <div class="card" style="position: relative; left: 0px; top: 0px;">
+        <div class="card-header">
+            <ion-title class="card-title" color="primary">
+              <i class="ion ion-stats-bars"></i>
+              Case Summary
+            </ion-title>
+          </div>
+          <div class="card-body">
+            <div style="height:350px">
+              <canvas #barChartCaseSummary></canvas>
+            </div>
+          </div>
+        </div>
+       </div>
     </div>
   </div>
 
