--- a/src/app/pages/muncitydashboard/muncitydashboard.page.html
+++ b/src/app/pages/muncitydashboard/muncitydashboard.page.html
@@ -137,7 +137,7 @@
     <!-- /.row -->
     <!-- Main row -->
     <div class="row">
-      <div class="col-lg-8">
+      <div class="col-lg-12">
         <div class="card" style="position: relative; left: 0px; top: 0px;">
         <div class="card-header">
             <ion-title class="card-title" color="primary">
@@ -163,6 +163,21 @@
           <div class="card-body">
             <div style="height:350px">
               <canvas #pieChartGenderSummary></canvas>
+            </div>
+          </div>
+        </div>
+       </div>
+       <div class="col-lg-8">
+        <div class="card" style="position: relative; left: 0px; top: 0px;">
+        <div class="card-header">
+            <ion-title class="card-title" color="primary">
+              <i class="ion ion-pie-graph"></i>
+              Case by Age Group
+            </ion-title>
+          </div>
+          <div class="card-body">
+            <div style="height:350px">
+              <canvas #barChartCanvasCaseByAgeGroup></canvas>
             </div>
           </div>
         </div>
