change label on qrcode

--- a/src/app/pages/scanqr/scanqr.page.html
+++ b/src/app/pages/scanqr/scanqr.page.html
@@ -15,7 +15,7 @@
   </ion-button>
  
   <ion-button expand="full" (click)="startScan()">
-    <ion-icon slot="start" name="qr-scanner"></ion-icon>
+    <ion-icon slot="start" name="barcode"></ion-icon>
     Start scan
   </ion-button>
  
