--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,9 +3,9 @@ ion-menu ion-content {
 
 }
 
-ion-menu {
-  max-width: 200px!important;
-}
+// ion-menu {
+//   max-width: 200px!important;
+// }
 
 ion-menu.md ion-content {
   --padding-start: 8px;
