--- a/src/app/pages/cases/cases.page.html
+++ b/src/app/pages/cases/cases.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Covid Cases</ion-title>
+    <ion-title>Covid Cases List</ion-title>
   </ion-toolbar>
   <!-- <ion-toolbar>
     <nav class="navbar navbar-expand navbar-primary navbar-dark">
