--- a/src/app/pages/muncitydashboard/muncitydashboard.page.html
+++ b/src/app/pages/muncitydashboard/muncitydashboard.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Municipality Dashboard as of {{currentdatetime}}</ion-title>
+    <ion-title>Data as of {{currentdatetime}}</ion-title>
   </ion-toolbar>
 </ion-header>
 
