--- a/src/app/pages/qrloglist/qrloglist.page.html
+++ b/src/app/pages/qrloglist/qrloglist.page.html
@@ -10,7 +10,7 @@
     <ion-item-sliding *ngFor="let item of items" #slidingItem>
       <ion-item>
         <ion-label>
-          <h3>{{item.timestamp}}</h3>
+          <h3>{{item.txndatetime}}</h3>
           <p>
             <strong>NAME:</strong>   {{item.data[1]}}, {{item.data[2]}} {{item.data[3]}} <br>
             <strong>GENDER:</strong> {{item.data[5]}} <br>
