--- a/src/app/pages/dashboard/dashboard.page.html
+++ b/src/app/pages/dashboard/dashboard.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title >COVID 19 Dashboard as of {{currentdatetime}}</ion-title>
+    <ion-title >Data as of {{currentdatetime}}</ion-title>
   </ion-toolbar>
 </ion-header>
 
