angular pwa setting

--- a/src/app/pages/scanqr/scanqr.page.html
+++ b/src/app/pages/scanqr/scanqr.page.html
@@ -99,7 +99,7 @@
                   <i class="fas fa-edit"></i>
                   Edit
                 </a>
-                <a class="btn btn-app btn-danger btn-sm" (click)="deleteItem(item)">
+                <a class="btn btn-app btn-danger btn-sm" (click)="deleteItem()">
                   <i class="fas fa-trash-alt"></i>
                   Delete
                 </a>
