--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,6 +14,7 @@
               <ion-label>{{ p.title }}</ion-label>
             </ion-item>
           </ion-menu-toggle>
+          <ion-list-header>Version: {{appVersion}}</ion-list-header>
         </ion-list>
 
         <ion-list id="labels-list">
