--- a/src/app/pages/qrloglist/qrloglist.page.html
+++ b/src/app/pages/qrloglist/qrloglist.page.html
@@ -1,5 +1,8 @@
 <ion-header>
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
     <ion-title>QR Code Logs</ion-title>
   </ion-toolbar>
 </ion-header>
