--- a/src/app/pages/scanqr/scanqr.page.html
+++ b/src/app/pages/scanqr/scanqr.page.html
@@ -1,5 +1,8 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
     <ion-title *ngIf="!haslocationsetting">Scan QR Code</ion-title>
     <ion-title *ngIf="haslocationsetting">Scan QR Code for location {{locationid}}</ion-title>
   </ion-toolbar>
