--- a/src/app/pages/qrprofile/qrprofile.page.html
+++ b/src/app/pages/qrprofile/qrprofile.page.html
@@ -14,7 +14,7 @@
     <ion-buttons slot="end">
       <ion-button *ngIf="!isend" (click)="next()">Next <ion-icon slot="end" name="arrow-forward"></ion-icon>
       </ion-button>
-      <ion-button *ngIf="isend && allowsave" (click)="save()">Save <ion-icon slot="end" name="save"></ion-icon>
+      <ion-button *ngIf="isend && ispolicyagree" (click)="save()">Save <ion-icon slot="end" name="save"></ion-icon>
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
@@ -68,17 +68,6 @@
           </ng-container>
         </div>
 
-        <ion-item>
-          <ion-label position="floating">Maiden Name</ion-label>
-          <ion-input class="text-uppercase" oninput="this.value = this.value.toUpperCase()" inputmode="text"
-            formControlName="maidenname"></ion-input>
-        </ion-item>
-        <div *ngFor="let validation of validation_messages.maidenname">
-          <ng-container
-            *ngIf="(isSubmitted && personInformationForm.get('maidenname')?.hasError(validation.type)) || (personInformationForm.get('maidenname')?.hasError(validation.type) && (personInformationForm.get('maidenname')?.dirty || personInformationForm.get('maidenname')?.touched))">
-            <small class="text-danger">{{ validation.message }}</small>
-          </ng-container>
-        </div>
 
         <ion-item>
           <ion-label position="floating">Name Extension</ion-label>
@@ -88,30 +77,6 @@
         <div *ngFor="let validation of validation_messages.nameextension">
           <ng-container
             *ngIf="(isSubmitted && personInformationForm.get('nameextension')?.hasError(validation.type)) || (personInformationForm.get('nameextension')?.hasError(validation.type) && (personInformationForm.get('nameextension')?.dirty || personInformationForm.get('nameextension')?.touched))">
-            <small class="text-danger">{{ validation.message }}</small>
-          </ng-container>
-        </div>
-
-        <ion-item>
-          <ion-label position="floating">Pre Name Title</ion-label>
-          <ion-input class="text-uppercase" oninput="this.value = this.value.toUpperCase()" inputmode="text"
-            formControlName="prenametitle"></ion-input>
-        </ion-item>
-        <div *ngFor="let validation of validation_messages.prenametitle">
-          <ng-container
-            *ngIf="(isSubmitted && personInformationForm.get('prenametitle')?.hasError(validation.type)) || (personInformationForm.get('prenametitle')?.hasError(validation.type) && (personInformationForm.get('prenametitle')?.dirty || personInformationForm.get('prenametitle')?.touched))">
-            <small class="text-danger">{{ validation.message }}</small>
-          </ng-container>
-        </div>
-
-        <ion-item>
-          <ion-label position="floating">Post Name Title</ion-label>
-          <ion-input class="text-uppercase" oninput="this.value = this.value.toUpperCase()" inputmode="text"
-            formControlName="postnametitle"></ion-input>
-        </ion-item>
-        <div *ngFor="let validation of validation_messages.postnametitle">
-          <ng-container
-            *ngIf="(isSubmitted && personInformationForm.get('postnametitle')?.hasError(validation.type)) || (personInformationForm.get('postnametitle')?.hasError(validation.type) && (personInformationForm.get('postnametitle')?.dirty || personInformationForm.get('postnametitle')?.touched))">
             <small class="text-danger">{{ validation.message }}</small>
           </ng-container>
         </div>
@@ -141,41 +106,6 @@
             <small class="text-danger">{{ validation.message }}</small>
           </ng-container>
         </div>
-        <p>&nbsp;</p>
-      </form>
-
-    </ion-slide>
-    <ion-slide>
-      <form [formGroup]="personInformationDetailForm">
-        <!-- {{personInformationDetailForm.value | json}} -->
-        <ion-toolbar color="primary">
-          <nav class="navbar navbar-expand navbar-primary navbar-dark">
-            <ion-title>Personal Information</ion-title>
-          </nav>
-        </ion-toolbar>
-        <ion-item>
-          <ion-label position="floating">Birth Place</ion-label>
-          <ion-input class="text-uppercase" oninput="this.value = this.value.toUpperCase()" inputmode="text"
-            formControlName="birthplace"></ion-input>
-        </ion-item>
-        <div *ngFor="let validation of validation_messages.birthplace">
-          <ng-container
-            *ngIf="(isSubmitted && personInformationDetailForm.get('birthplace')?.hasError(validation.type)) || (personInformationDetailForm.get('birthplace')?.hasError(validation.type) && (personInformationDetailForm.get('birthplace')?.dirty || personInformationDetailForm.get('birthplace')?.touched))">
-            <small class="text-danger">{{ validation.message }}</small>
-          </ng-container>
-        </div>
-
-        <ion-item>
-          <ion-label position="floating">Citizenship</ion-label>
-          <ion-input class="text-uppercase" oninput="this.value = this.value.toUpperCase()" inputmode="text"
-            formControlName="citizenship"></ion-input>
-        </ion-item>
-        <div *ngFor="let validation of validation_messages.citizenship">
-          <ng-container
-            *ngIf="(isSubmitted && personInformationDetailForm.get('citizenship')?.hasError(validation.type)) || (personInformationDetailForm.get('citizenship')?.hasError(validation.type) && (personInformationDetailForm.get('citizenship')?.dirty || personInformationDetailForm.get('citizenship')?.touched))">
-            <small class="text-danger">{{ validation.message }}</small>
-          </ng-container>
-        </div>
 
         <ion-item>
           <ion-label position="floating">Civil Status</ion-label>
@@ -189,99 +119,7 @@
         </ion-item>
         <div *ngFor="let validation of validation_messages.civilstatus">
           <ng-container
-            *ngIf="(isSubmitted && personInformationDetailForm.get('civilstatus')?.hasError(validation.type)) || (personInformationDetailForm.get('civilstatus')?.hasError(validation.type) && (personInformationDetailForm.get('civilstatus')?.dirty || personInformationDetailForm.get('civilstatus')?.touched))">
-            <small class="text-danger">{{ validation.message }}</small>
-          </ng-container>
-        </div>
-
-        <ion-item>
-          <ion-label position="floating">Profession</ion-label>
-          <ion-input class="text-uppercase" oninput="this.value = this.value.toUpperCase()" inputmode="text"
-            formControlName="profession"></ion-input>
-        </ion-item>
-        <div *ngFor="let validation of validation_messages.profession">
-          <ng-container
-            *ngIf="(isSubmitted && personInformationDetailForm.get('profession')?.hasError(validation.type)) || (personInformationDetailForm.get('profession')?.hasError(validation.type) && (personInformationDetailForm.get('profession')?.dirty || personInformationDetailForm.get('profession')?.touched))">
-            <small class="text-danger">{{ validation.message }}</small>
-          </ng-container>
-        </div>
-
-        <ion-item>
-          <ion-label position="floating">Tin</ion-label>
-          <ion-input class="text-uppercase" oninput="this.value = this.value.toUpperCase()" inputmode="text"
-            formControlName="tin"></ion-input>
-        </ion-item>
-        <div *ngFor="let validation of validation_messages.tin">
-          <ng-container
-            *ngIf="(isSubmitted && personInformationDetailForm.get('tin')?.hasError(validation.type)) || (personInformationDetailForm.get('tin')?.hasError(validation.type) && (personInformationDetailForm.get('tin')?.dirty || personInformationDetailForm.get('tin')?.touched))">
-            <small class="text-danger">{{ validation.message }}</small>
-          </ng-container>
-        </div>
-
-        <ion-item>
-          <ion-label position="floating">SSS</ion-label>
-          <ion-input class="text-uppercase" oninput="this.value = this.value.toUpperCase()" inputmode="text"
-            formControlName="sss"></ion-input>
-        </ion-item>
-        <div *ngFor="let validation of validation_messages.sss">
-          <ng-container
-            *ngIf="(isSubmitted && personInformationDetailForm.get('sss')?.hasError(validation.type)) || (personInformationDetailForm.get('sss')?.hasError(validation.type) && (personInformationDetailForm.get('sss')?.dirty || personInformationDetailForm.get('sss')?.touched))">
-            <small class="text-danger">{{ validation.message }}</small>
-          </ng-container>
-        </div>
-
-        <ion-item>
-          <ion-label position="floating">Religion</ion-label>
-          <ion-input class="text-uppercase" oninput="this.value = this.value.toUpperCase()" inputmode="text"
-            formControlName="religion"></ion-input>
-        </ion-item>
-        <div *ngFor="let validation of validation_messages.religion">
-          <ng-container
-            *ngIf="(isSubmitted && personInformationDetailForm.get('religion')?.hasError(validation.type)) || (personInformationDetailForm.get('religion')?.hasError(validation.type) && (personInformationDetailForm.get('religion')?.dirty || personInformationDetailForm.get('religion')?.touched))">
-            <small class="text-danger">{{ validation.message }}</small>
-          </ng-container>
-        </div>
-
-        <!-- <ion-item>
-          <ion-label position="floating">Height (cm)</ion-label>
-          <ion-input class="text-uppercase" oninput="this.value = this.value.toUpperCase()" type="number" formControlName="height"></ion-input>
-        </ion-item>
-        <div *ngFor="let validation of validation_messages.height">
-          <ng-container
-            *ngIf="(isSubmitted && personInformationForm.get('height')?.hasError(validation.type)) || (personInformationForm.get('height')?.hasError(validation.type) && (personInformationForm.get('height')?.dirty || personInformationForm.get('height')?.touched))">
-            <small class="text-danger">{{ validation.message }}</small>
-          </ng-container>
-        </div>
-
-        <ion-item>
-          <ion-label position="floating">Weight (kg)</ion-label>
-          <ion-input class="text-uppercase" oninput="this.value = this.value.toUpperCase()" type="number" formControlName="weight"></ion-input>
-        </ion-item>
-        <div *ngFor="let validation of validation_messages.weight">
-          <ng-container
-            *ngIf="(isSubmitted && personInformationForm.get('weight')?.hasError(validation.type)) || (personInformationForm.get('weight')?.hasError(validation.type) && (personInformationForm.get('weight')?.dirty || personInformationForm.get('weight')?.touched))">
-            <small class="text-danger">{{ validation.message }}</small>
-          </ng-container>
-        </div> -->
-      </form>
-      <p>&nbsp;</p>
-    </ion-slide>
-    <ion-slide>
-      <form [formGroup]="personContactInformationForm">
-        <!-- {{personContactInformationForm.value | json}} -->
-        <ion-toolbar color="primary">
-          <nav class="navbar navbar-expand navbar-primary navbar-dark">
-            <ion-title>Contact Information</ion-title>
-          </nav>
-        </ion-toolbar>
-        <ion-item>
-          <ion-label position="floating">Phone Number</ion-label>
-          <ion-input class="text-uppercase" oninput="this.value = this.value.toUpperCase()" inputmode="tel"
-            formControlName="phoneno"></ion-input>
-        </ion-item>
-        <div *ngFor="let validation of validation_messages.phoneno">
-          <ng-container
-            *ngIf="(isSubmitted && personContactInformationForm.get('phoneno')?.hasError(validation.type)) || (personContactInformationForm.get('phoneno')?.hasError(validation.type) && (personContactInformationForm.get('phoneno')?.dirty || personContactInformationForm.get('phoneno')?.touched))">
+            *ngIf="(isSubmitted && personInformationForm.get('civilstatus')?.hasError(validation.type)) || (personInformationForm.get('civilstatus')?.hasError(validation.type) && (personInformationForm.get('civilstatus')?.dirty || personInformationForm.get('civilstatus')?.touched))">
             <small class="text-danger">{{ validation.message }}</small>
           </ng-container>
         </div>
@@ -293,27 +131,11 @@
         </ion-item>
         <div *ngFor="let validation of validation_messages.mobileno">
           <ng-container
-            *ngIf="(isSubmitted && personContactInformationForm.get('mobileno')?.hasError(validation.type)) || (personContactInformationForm.get('mobileno')?.hasError(validation.type) && (personContactInformationForm.get('mobileno')?.dirty || personContactInformationForm.get('mobileno')?.touched))">
+            *ngIf="(isSubmitted && personInformationForm.get('mobileno')?.hasError(validation.type)) || (personInformationForm.get('mobileno')?.hasError(validation.type) && (personInformationForm.get('mobileno')?.dirty || personInformationForm.get('mobileno')?.touched))">
             <small class="text-danger">{{ validation.message }}</small>
           </ng-container>
         </div>
 
-        <ion-item>
-          <ion-label position="floating">Email</ion-label>
-          <ion-input inputmode="email" formControlName="email"></ion-input>
-        </ion-item>
-        <div *ngFor="let validation of validation_messages.email">
-          <ng-container
-            *ngIf="(isSubmitted && personContactInformationForm.get('email')?.hasError(validation.type)) || (personContactInformationForm.get('email')?.hasError(validation.type) && (personContactInformationForm.get('email')?.dirty || personContactInformationForm.get('email')?.touched))">
-            <small class="text-danger">{{ validation.message }}</small>
-          </ng-container>
-        </div>
-      </form>
-      <p>&nbsp;</p>
-    </ion-slide>
-    <ion-slide>
-      <form [formGroup]="personAddressForm">
-        <!-- {{personAddressForm.value | json}} -->
         <ion-toolbar color="primary">
           <nav class="navbar navbar-expand navbar-primary navbar-dark">
             <ion-title>Address</ion-title>
@@ -328,7 +150,7 @@
           </ion-item>
           <div *ngFor="let validation of validation_messages.province">
             <ng-container
-              *ngIf="(isSubmitted && personAddressForm.get('province.code')?.hasError(validation.type)) || (personAddressForm.get('province.code')?.hasError(validation.type) && (personAddressForm.get('province.code')?.dirty || personAddressForm.get('province.code')?.touched))">
+              *ngIf="(isSubmitted && personInformationForm.get('province.code')?.hasError(validation.type)) || (personInformationForm.get('province.code')?.hasError(validation.type) && (personInformationForm.get('province.code')?.dirty || personInformationForm.get('province.code')?.touched))">
               <small class="text-danger">{{ validation.message }}</small>
             </ng-container>
           </div>
@@ -342,7 +164,7 @@
           </ion-item>
           <div *ngFor="let validation of validation_messages.municipality">
             <ng-container
-              *ngIf="(isSubmitted && personAddressForm.get('municipality.code')?.hasError(validation.type)) || (personAddressForm.get('municipality.code')?.hasError(validation.type) && (personAddressForm.get('municipality.code')?.dirty || personAddressForm.get('municipality.code')?.touched))">
+              *ngIf="(isSubmitted && personInformationForm.get('municipality.code')?.hasError(validation.type)) || (personInformationForm.get('municipality.code')?.hasError(validation.type) && (personInformationForm.get('municipality.code')?.dirty || personInformationForm.get('municipality.code')?.touched))">
               <small class="text-danger">{{ validation.message }}</small>
             </ng-container>
           </div>
@@ -356,7 +178,7 @@
           </ion-item>
           <div *ngFor="let validation of validation_messages.barangay">
             <ng-container
-              *ngIf="(isSubmitted && personAddressForm.get('barangay.code')?.hasError(validation.type)) || (personAddressForm.get('barangay.code')?.hasError(validation.type) && (personAddressForm.get('barangay.code')?.dirty || personAddressForm.get('barangay.code')?.touched))">
+              *ngIf="(isSubmitted && personInformationForm.get('barangay.code')?.hasError(validation.type)) || (personInformationForm.get('barangay.code')?.hasError(validation.type) && (personInformationForm.get('barangay.code')?.dirty || personInformationForm.get('barangay.code')?.touched))">
               <small class="text-danger">{{ validation.message }}</small>
             </ng-container>
           </div>
@@ -368,11 +190,28 @@
         </ion-item>
         <div *ngFor="let validation of validation_messages.street">
           <ng-container
-            *ngIf="(isSubmitted && personAddressForm.get('street')?.hasError(validation.type)) || (personAddressForm.get('street')?.hasError(validation.type) && (personAddressForm.get('street')?.dirty || personAddressForm.get('street')?.touched))">
+            *ngIf="(isSubmitted && personInformationForm.get('street')?.hasError(validation.type)) || (personInformationForm.get('street')?.hasError(validation.type) && (personInformationForm.get('street')?.dirty || personInformationForm.get('street')?.touched))">
             <small class="text-danger">{{ validation.message }}</small>
           </ng-container>
         </div>
+       
+        <p>&nbsp;</p>
       </form>
+    </ion-slide>
+    <ion-slide>
+      <ion-card>
+        <ion-card-header>
+          <ion-card-title>Privacy Policy</ion-card-title>
+        </ion-card-header>
+      
+        <ion-card-content>
+          This contact tracing application will collect the minimum basic personal data from you that may be used to fight the COVID-19 pandemic. The data collected will be used to speed up the tracing of possible contacts of persons that may or may not be infected with the virus. Your personal data will be collected at points of entry in establishments, institutions, offices, or places where you may come into contact with persons infected or suspected to be infected with the virus. Entry points will collect data via smartphones which when it is online will automatically upload the data to servers at the Provincial Capitol and at the same time delete the data from the smartphone. These minimum personal data will be kept at the Provincial Government of Bukidnon Servers for a certain period of time before it is deemed immaterial for contact tracing and subsequently deleted from storage.
+        </ion-card-content>
+        <ion-item>
+          <ion-label>Agree</ion-label>
+          <ion-checkbox [(ngModel)]="ispolicyagree" (ionChange)="updatePolicyAgree()"></ion-checkbox>
+        </ion-item>
+      </ion-card>
       <p>&nbsp;</p>
     </ion-slide>
   </ion-slides>
