added map view with classification and charts

--- a/src/app/components/muncitymap/muncitymap.component.html
+++ b/src/app/components/muncitymap/muncitymap.component.html
@@ -1,1 +1,13 @@
+<ion-toolbar color="primary">
+    <nav class="navbar navbar-expand navbar-primary navbar-dark">
+        <ion-title>Active Cases by Municipality</ion-title>
+    </nav>
+</ion-toolbar>
 <div id="mapmuncity" class="map" ></div>
+<ion-toolbar color="primary">
+    <nav class="navbar navbar-expand navbar-primary navbar-dark">
+        <ion-title>Covid Case Map</ion-title>
+    </nav>
+</ion-toolbar>
+<div id="covidcasemap" class="map" ></div>
+<ion-img src="{{imagesource}}" style="width:100px;"></ion-img>
