--- a/src/app/pages/about/about.page.html
+++ b/src/app/pages/about/about.page.html
@@ -1,26 +1,13 @@
 <ion-content>
-  <ion-header class="ion-no-border">
-    <ion-toolbar>
-      <ion-buttons slot="start">
-        <ion-menu-button></ion-menu-button>
-      </ion-buttons>
-    </ion-toolbar>
-  </ion-header>
-
-  <div class="about-header">
-    <!-- <ion-img src="/assets/about.jpg"></ion-img> -->
-  </div>
-
-  <div class="about-info">
-    <h3 class="ion-padding-top ion-padding-start">About</h3>
-
-    <p class="ion-padding-start ion-padding-end">
-      The PGB.COVID.WALL is an Information System developed by the Provincial Information and Communications Technology Division for the Provincial of Bukidnon.
-    </p>
-
-    <!-- <h3 class="ion-padding-top ion-padding-start">{{this.appVersion.getAppName()}}</h3>
-    <h3 class="ion-padding-top ion-padding-start">{{this.appVersion.getVersionCode()}}</h3>
-    <h3 class="ion-padding-top ion-padding-start">{{ this.appVersion.getVersionNumber()}}</h3> -->
-
-  </div>
+  <ion-card>
+    <img src="/assets/banner.png">
+    <ion-card-header>
+      <ion-card-subtitle>PGB.WALL</ion-card-subtitle>
+      <ion-card-title>Provincial Covid19 Dashboard</ion-card-title>
+    </ion-card-header>
+  
+    <ion-card-content>
+      This App is developed by PICTD together with the Provincial Health Office, Municipal Health Office and the Provincial Government of Bukidnon.
+    </ion-card-content>
+  </ion-card>
 </ion-content>
