--- a/src/app/pages/cases/cases.page.html
+++ b/src/app/pages/cases/cases.page.html
@@ -27,7 +27,7 @@
           <h3 *ngIf="item.properties['classification'] == 'PROBABLE'" class="bg-indigo">{{item.properties['classification'] }}</h3>
           <p>
             {{item.properties['address_muncity']}} - {{item.properties['address_barangay']}} |
-            CIVL STATUSs : {{item.properties['person_civilstatus']}} |
+            CIVL STATUS : {{item.properties['person_civilstatus']}} |
             OCCUPATION : {{item.properties['person_occupation']}} |
             WORKPLACE : {{item.properties['person_workplaceaddress']}} |
             <!-- {{item.properties['hasfever'] == 'Y' || item.properties['hasfever'] == 'Y' || item.properties['hascolds'] == 'Y' || item.properties['hasdiarrhea'] == 'Y' || item.properties['hasdiffbreath'] == 'Y' ? "SYMPTOMATIC" : "ASYMPTOMATIC"  }} -->
