--- a/src/app/pages/maps/maps.page.html
+++ b/src/app/pages/maps/maps.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>Active Cases</ion-title>
+    <ion-title>Covid Maps</ion-title>
   </ion-toolbar>
 </ion-header>
 
