--- a/src/app/pages/qrprofile/qrprofile.page.html
+++ b/src/app/pages/qrprofile/qrprofile.page.html
@@ -209,7 +209,7 @@
         </ion-card-content>
         <ion-item>
           <ion-label>Agree</ion-label>
-          <ion-checkbox [(ngModel)]="ispolicyagree" (ionChange)="updatePolicyAgree()"></ion-checkbox>
+          <ion-checkbox [(ngModel)]="notificationsettings" (ionChange)="updatePolicyAgree()"></ion-checkbox>
         </ion-item>
       </ion-card>
       <p>&nbsp;</p>
