--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -37,10 +37,10 @@
         <ion-list id="labels-list">
           <ion-list-header *ngIf="syncserverstatus">Settings</ion-list-header>
           <ion-list-header *ngIf="!syncserverstatus">Settings (settings are only available online)</ion-list-header>
-          <ion-item lines="none" [disabled]="!syncserverstatus">
+          <!-- <ion-item lines="none" [disabled]="!syncserverstatus">
             <ion-label>Notification</ion-label>
             <ion-toggle color="primary" [(ngModel)]="notificationsettings" (ionChange)="updateNotificationSetting()"></ion-toggle>
-          </ion-item>
+          </ion-item> -->
         </ion-list>
       </ion-content>
     </ion-menu>
